--- a/frontend/src/bookmark/bookmark.html
+++ b/frontend/src/bookmark/bookmark.html
@@ -56,13 +56,13 @@
     </div>
     <footer class="nav-bar">
       <div class="nav-item">
-        <a href="../bookmark/bookmark.html" class="anchor-links">AD BKM</a>
+        <a href="./bookmark.html" class="anchor-links">AD BKM</a>
       </div>
       <div class="nav-item">
-        <a href="../recommendation.html" class="anchor-links">AI REC</a>
+        <a href="../recommendation/recommendation.html" class="anchor-links">AI REC</a>
       </div>
       <div class="nav-item">
-        <a href="../settings.html" class="anchor-links">SETT</a>
+        <a href="../settings/settings.html" class="anchor-links">SETT</a>
       </div>
     </footer>
   </body>
