--- a/frontend/src/settings/settings.html
+++ b/frontend/src/settings/settings.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="settings.css" />
     <title>settings</title>
   </head>
   <body>
@@ -14,10 +14,10 @@
       </div>
       <footer class="nav-bar">
         <div class="nav-item">
-          <a href="./bookmark/bookmark.html" class="anchor-links">AD BKM</a>
+          <a href="../bookmark/bookmark.html" class="anchor-links">AD BKM</a>
         </div>
         <div class="nav-item">
-          <a href="./recommendation.html" class="anchor-links">AI REC</a>
+          <a href="../recommendation/recommendation.html" class="anchor-links">AI REC</a>
         </div>
         <div class="nav-item">
           <a href="./settings.html" class="anchor-links">SETT</a>
