--- a/popup.html
+++ b/popup.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 
@@ -33,23 +34,17 @@
 <body>
   <h1>Video</h1>
   <h2>Trending Videos</h2>
-  <ul id="videoList">
-  </ul>
-  <h1>Articles</h1>
-  <h2>Trending Articles</h2>
-  <ul id="articlesList"></ul>
+  <ul id="videoList"></ul>
+
   <h1>Books</h1>
   <h2>Trending Books</h2>
   <ul id="booksList"></ul>
-  <h1>Movies</h1>
-  <h2>Recommended Movies</h2>
-  <ul id="moviesList"></ul>
-  <!-- <h1>Publications</h1>
-  <h2>Recommended Publications</h2>
-  <ul id="publicationsList"></ul> -->
+
+  <h1>Google Search Results</h1>
+  <ul id="linksList"></ul>
+
+  <p id="errorMessage"></p>
   <script src="popup.js"></script>
 </body>
 
 </html>
-
-
