--- a/frontend/src/recommendation/recommendation.html
+++ b/frontend/src/recommendation/recommendation.html
@@ -14,23 +14,19 @@
         <h1 class="title">recommendations</h1>
         <div class="recommendations-container"></div>
       </div>
-      <div>
-        <div>
-          <h1>Video</h1>
-          <h2>Trending Vidoes</h2>
-          <ul id="videoList"></ul>
-        </div>
-        <div>
-          <h1>Articles</h1>
-          <h2>Trending Articles</h2>
-          <ul id="articlesList"></ul>
-        </div>
-        <div>
-          <h1>Books</h1>
-          <h2>Trending Books</h2>
-          <ul id="booksList"></ul>
-        </div>
-      </div>
+      <h1>Video</h1>
+      <h2>Trending Videos</h2>
+      <ul id="videoList"></ul>
+
+      <h1>Books</h1>
+      <h2>Trending Books</h2>
+      <ul id="booksList"></ul>
+
+      <h1>Google Search Results</h1>
+      <ul id="linksList"></ul>
+
+      <p id="errorMessage"></p>
+      <script src="popup.js"></script>
       <footer class="nav-bar">
         <div class="nav-item">
           <a href="../bookmark/bookmark.html" class="anchor-links">AD BKM</a>
